# mindbug

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  benchmark.py  consistency_check.py  play.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  train.py  train_mindbug.py
mindbug/: __init__.py  test_framework.py
mindbug/algorithms/: __init__.py  deep_cfr.py  networks.py
mindbug/core/: __init__.py  actions.py  cards.py  constants.py  creature.py  engine.py  state.py
mindbug/game/: __init__.py  actions.py  cards.py  constants.py  engine.py  state.py  state_pool.py
mindbug/training/: __init__.py  evaluate.py  evaluator.py  train.py  train_improved.py  trainer.py
mindbug/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_cards.py  test_cfr.py  test_engine.py  test_integration.py
